versioned_docs/version-2.10/reference/targets/python_requirements.mdx
---
title: python_requirements
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Generate a `python_requirement` for each entry in a requirements.txt-style file.

This works with pip-style requirements files: https://pip.pypa.io/en/latest/reference/requirements-file-format/. However, pip options like `--hash` are (for now) ignored.

Instead of pip-style VCS requirements, use direct references from PEP 440: https://www.python.org/dev/peps/pep-0440/#direct-references.

Backend: <span className="color--primary">`pants.backend.python`</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `./pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `./pants list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codemodule_mappingcode}
</div>

## `module_mapping`

<Field
    type_repr={`Dict[str, Iterable[str]]`}
    default_repr={`FrozenDict({})`}
>

A mapping of requirement names to a list of the modules they provide.

For example, `{"ansicolors": ["colors"]}`.

Any unspecified requirements will use a default. See the `modules` field from the `python_requirement` target for more information.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetype_stubs_module_mappingcode}
</div>

## `type_stubs_module_mapping`

<Field
    type_repr={`Dict[str, Iterable[str]]`}
    default_repr={`FrozenDict({})`}
>

A mapping of type-stub requirement names to a list of the modules they provide.

For example, `{"types-requests": ["requests"]}`.

If the requirement is not specified _and_ its name looks like a type stub, Pants will use a default. See the `type_stub_modules` field from the `python_requirement` target for more information.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesourcecode}
</div>

## `source`

<Field
    type_repr={`str | None`}
    default_repr={`'requirements.txt'`}
>

A single file that belongs to this target.

Path is relative to the BUILD file&#x27;s directory, e.g. `source='example.ext'`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeoverridescode}
</div>

## `overrides`

<Field
    type_repr={`Dict[Union[str, Tuple[str, ...]], Dict[str, Any]] | None`}
    default_repr={`None`}
>

Override the field values for generated `python_requirement` targets.

Expects a dictionary of requirements to a dictionary for the overrides. You may either use a string for a single requirement, or a string tuple for multiple requirements. Each override is a dictionary of field names to the overridden value.

For example:

`&#x60;`
overrides=&#123;
&#x22;django&#x22;: &#123;&#x22;dependencies&#x22;: [&#x22;#setuptools&#x22;]]&#125;,
&#x22;ansicolors&#x22;: &#123;&#x22;description&#x22;: &#x22;pretty colors&#x22;]&#125;,
(&#x22;ansicolors, &#x22;django&#x22;): &#123;&#x22;tags&#x22;: [&#x22;overridden&#x22;]&#125;,
&#125;
`&#x60;`

Every overridden requirement is validated to be generated by this target.

You can specify the same requirement in multiple keys, so long as you don&#x27;t override the same field more than one time for the requirement.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#coderesolvecode}
</div>

## `resolve`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The resolve from `[python].resolves` that this requirement is included in.

If not defined, will default to `[python].default_resolve`.

When generating a lockfile for a particular resolve via the `generate-lockfiles` goal, it will include all requirements that are declared with that resolve. First-party targets like `python_source` and `pex_binary` then declare which resolve they use via their `resolve` field; so, for your first-party code to use a particular `python_requirement` target, that requirement must be included in the resolve used by that code.

</Field>

</span>
